<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.adscity.smart_house.Tutor_Section.Tutor_fourth">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/BackgroundFourthTutorScreenLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/backgroundtutor"
        app:layout_constraintBottom_toTopOf="@+id/DescriptionFourthTutorScreenLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="220sp"
            android:layout_height="220sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/devicestutor" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/DescriptionFourthTutorScreenLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackgroundFourthTutorScreenLayout">

        <TextView
            android:id="@+id/devicesScreenTutorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/devices"
            android:textColor="@color/main_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NameProjectFourthScreenTutorTextView" />

        <TextView
            android:id="@+id/NameProjectFourthScreenTutorTextView"
            android:layout_width="260sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/smart_home_help"
            android:textColor="@color/main_black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionFourthScreenTutorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55sp"
            android:layout_marginStart="55sp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/description_fourth_Screen_tutor"
            android:textColor="@color/main_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/devicesScreenTutorTextView" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>