<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.adscity.smart_house.Tutor_Section.Tutor_ninth">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/BackgroundSecondTutorScreenLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/backgroundtutor"
        app:layout_constraintBottom_toTopOf="@+id/DescriptionFirstTutorScreenLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="220sp"
            android:layout_height="220sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_voice_tutor" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/DescriptionFirstTutorScreenLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackgroundSecondTutorScreenLayout">

        <TextView
            android:id="@+id/NameProjectSecondScreenTutorTextView"
            android:layout_width="260sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/smart_home_help"
            android:textColor="@color/main_black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/SensorsScreenTutorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/command_for_voice"
            android:textColor="@color/main_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NameProjectSecondScreenTutorTextView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55sp"
            android:layout_marginStart="55sp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/commands"
            android:textColor="@color/main_black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SensorsScreenTutorTextView" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
